updated @ 10-23-PM on 02-14-2016

--- a/index.html
+++ b/index.html
@@ -498,14 +498,18 @@ pre[class*="language-"] {
 <li><p>Introduction To HTML5 and CSS3</p>
 
 <ul>
-<li>HTML Email Newsletter</li>
-<li>Static One Page Design Layout</li>
+<li>Three Landing Page Layouts Created</li>
+<li>Resumes Updated To Reflect New Job Opportunities</li>
 </ul></li>
-<li><p>Introduction to Github and GIT workflow for team based projects</p>
+<li><p>Geekwise Professional Workshop Series</p>
 
 <ul>
-<li>Concepts are taught for combining team member projects into a single deliverable for a client</li>
-<li>Team Leads are introduced and expected to manage timelines and team dynamics</li>
+<li>Resume Building And Targeting For Specific Job Opportunities</li>
+<li><p>Freelance Training On Job Proposals, In Person Meetings And Managing Project Expectations</p></li>
+<li><p>Introduction to Github and GIT workflow for team based projects</p></li>
+<li><p>Concepts are taught for combining team member projects into a single deliverable for a client</p></li>
+<li><p>Team Leads are introduced and expected to manage timelines and team dynamics</p></li>
+<li><p>Review Of Expectations After Completing </p></li>
 </ul></li>
 </ul>
 
