--- a/index.html
+++ b/index.html
@@ -450,8 +450,8 @@ pre[class*="language-"] {
 <h1 id="toc_2">Week 1: (02/01/16 - 02/05/16)</h1>
 
 <pre><code>##Overview Of Concepts Covered
-- Four soft skills needed for employemnet
-- Creativity,Communication,Critical Thinking,Collaberation
+- Four soft skills needed for employment
+- Creativity,Communication,Critical Thinking, Collaboration
 - Introduction to HTML and CSS</code></pre>
 
 <h1 id="toc_3">Week 2: (02/08/16 - 02/12/16)</h1>
@@ -459,8 +459,8 @@ pre[class*="language-"] {
 <h2 id="toc_4">Overview Of Concepts Covered</h2>
 
 <pre><code>##Overview Of Concepts Covered
-- Four soft skills needed for employemnet
-- Creativity,Communication,Critical Thinking,Collaberation
+- Four soft skills needed for employment
+- Creativity,Communication,Critical Thinking, Collaboration
 - Introduction to HTML and CSS</code></pre>
 
 <h1 id="toc_5">Week 3: (02/15/16 - 02/19/16)</h1>
@@ -482,15 +482,19 @@ pre[class*="language-"] {
 
 <h1 id="toc_9">Week 7: (03/14/16 - 03/18/16)</h1>
 
-<pre><code>##Overview Of Concepts Covered</code></pre>
+<pre><code>##Overview Of Concepts Covered
+- 12 page site built from DustyBuns.com
+- Emphasis on complex CSS sections
+- pseudo selectors and stacking class 
+- Introduction to CSS animations</code></pre>
 
 <h1 id="toc_10">Week 8: (03/21/16 - 03/25/16)</h1>
 
 <pre><code>##Overview Of Concepts Covered
-- Introduction to Javascript
-- Emphasis on Create of CRUD
-- For Loops and If Statementes
-- Introduction to Event Listeners</code></pre>
+- Debugging previous projects (GeekwiseAcademy.com &amp; DustyBuns.com)
+- Emphasis on interaction with a Project Manager
+- Working on a complete site from mockup to static HTML/CSS 
+- Introduction to workflow concepts for production work</code></pre>
 
 <h1 id="toc_11">Week 9: (03/28/16 - 04/01/16)</h1>
 
@@ -505,8 +509,8 @@ pre[class*="language-"] {
 
 <pre><code>##Overview Of Concepts Covered
 - Introduction to API&#39;s
-- Emphasis on Create of CRUD
-- For Loops and If Statementes
+- Emphasis on Create aspects CRUD
+- For Loops and If Statements
 - Introduction to Event Listeners</code></pre>
 
 <h1 id="toc_13">Week 11: (04/11/16 - 04/15/16)</h1>
