updated week 4 through 8

--- a/index.html
+++ b/index.html
@@ -470,21 +470,32 @@ pre[class*="language-"] {
 
 <h1 id="toc_6">Week 4: (02/22/16 - 02/26/16)</h1>
 
-<pre><code>##Overview Of Concepts Covered</code></pre>
+<pre><code>##Overview Of Concepts Covered
+- Web Layout: From design to first presentation to a client - Emphasis on Mockups and Client presentation materials
+- Language Usage and Vocabulary for professional client interaction
+- Introduction to the Box Model and basic web layout</code></pre>
 
 <h1 id="toc_7">Week 5: (02/29/16 - 03/04/16)</h1>
 
-<pre><code>##Overview Of Concepts Covered</code></pre>
+<pre><code>##Overview Of Concepts Covered
+- Weekly Professional Workshop Series introduced
+- Emphasis on Resumes and Independent study 
+- Language Usage and Vocabulary for professional Web Development
+- Introduction to Github, GIT and repositories for workflow on production level projects</code></pre>
 
 <h1 id="toc_8">Week 6: (03/07/16 - 03/11/16)</h1>
 
-<pre><code>##Overview Of Concepts Covered</code></pre>
+<pre><code>##Overview Of Concepts Covered
+- 7 page site built from GeekwiseAcademy.com
+- Emphasis on CSS Box Model 
+- Page Layout and HTML/CSS Structure 
+- Introduction to FlexBox and Mobile Web</code></pre>
 
 <h1 id="toc_9">Week 7: (03/14/16 - 03/18/16)</h1>
 
 <pre><code>##Overview Of Concepts Covered
-- 12 page site built from DustyBuns.com
-- Emphasis on complex CSS sections
+- 14 page site built from DustyBuns.com
+- Emphasis on complex CSS Selectors
 - pseudo selectors and stacking class 
 - Introduction to CSS animations</code></pre>
 
