updated index page

--- a/index.html
+++ b/index.html
@@ -471,7 +471,8 @@ pre[class*="language-"] {
 <h1 id="toc_6">Week 4: (02/22/16 - 02/26/16)</h1>
 
 <pre><code>##Overview Of Concepts Covered
-- Web Layout: From design to first presentation to a client - Emphasis on Mockups and Client presentation materials
+- Web Layout: From design to first presentation to a client
+- Emphasis on Mockups and Client presentation materials
 - Language Usage and Vocabulary for professional client interaction
 - Introduction to the Box Model and basic web layout</code></pre>
 
