--- a/index.html
+++ b/index.html
@@ -449,87 +449,96 @@ pre[class*="language-"] {
 
 <h1 id="toc_2">Week 1: (02/01/16 - 02/05/16)</h1>
 
-<pre><code>##Overview Of Concepts Covered
+<pre><code>* Overview Of Concepts Covered
 - Four soft skills needed for employment
 - Creativity,Communication,Critical Thinking, Collaboration
 - Introduction to HTML and CSS</code></pre>
 
 <h1 id="toc_3">Week 2: (02/08/16 - 02/12/16)</h1>
 
-<h2 id="toc_4">Overview Of Concepts Covered</h2>
+<pre><code>* Overview Of Concepts Covered
+- Team building
+- Group Webpage Projects introduced
+- Measurements of success introduced
+- Discussion of accountability
+- What will it take to succeed in the program?</code></pre>
 
-<pre><code>##Overview Of Concepts Covered
-- Four soft skills needed for employment
-- Creativity,Communication,Critical Thinking, Collaboration
-- Introduction to HTML and CSS</code></pre>
+<h1 id="toc_4">Week 3: (02/15/16 - 02/19/16)</h1>
 
-<h1 id="toc_5">Week 3: (02/15/16 - 02/19/16)</h1>
+<pre><code>* Overview Of Concepts Covered
+- Upwork.com Tests introduced
+- Life skills needed to transition into web development
+- Independent learning and outside practice
+- Programming fundamentals
+- Introduction to Computer Science fundamentals
+- The 12 Steps To Better Code
+- The &quot;web&quot; as a language using HTML/CSS/JS </code></pre>
 
-<pre><code>##Overview Of Concepts Covered
-- Upwork.com Tests introduced</code></pre>
+<h1 id="toc_5">Week 4: (02/22/16 - 02/26/16)</h1>
 
-<h1 id="toc_6">Week 4: (02/22/16 - 02/26/16)</h1>
-
-<pre><code>##Overview Of Concepts Covered
+<pre><code>* Overview Of Concepts Covered
 - Web Layout: From design to first presentation to a client
 - Emphasis on Mockups and Client presentation materials
 - Language Usage and Vocabulary for professional client interaction
 - Introduction to the Box Model and basic web layout</code></pre>
 
-<h1 id="toc_7">Week 5: (02/29/16 - 03/04/16)</h1>
+<h1 id="toc_6">Week 5: (02/29/16 - 03/04/16)</h1>
 
-<pre><code>##Overview Of Concepts Covered
+<pre><code>* Overview Of Concepts Covered
 - Weekly Professional Workshop Series introduced
 - Emphasis on Resumes and Independent study 
 - Language Usage and Vocabulary for professional Web Development
-- Introduction to Github, GIT and repositories for workflow on production level projects</code></pre>
+- Introduction to Github, GIT
+- Repositories for workflow on production level projects</code></pre>
 
-<h1 id="toc_8">Week 6: (03/07/16 - 03/11/16)</h1>
+<h1 id="toc_7">Week 6: (03/07/16 - 03/11/16)</h1>
 
-<pre><code>##Overview Of Concepts Covered
+<pre><code>* Overview Of Concepts Covered
 - 7 page site built from GeekwiseAcademy.com
 - Emphasis on CSS Box Model 
 - Page Layout and HTML/CSS Structure 
 - Introduction to FlexBox and Mobile Web</code></pre>
 
-<h1 id="toc_9">Week 7: (03/14/16 - 03/18/16)</h1>
+<h1 id="toc_8">Week 7: (03/14/16 - 03/18/16)</h1>
 
-<pre><code>##Overview Of Concepts Covered
+<pre><code>* Overview Of Concepts Covered
 - 14 page site built from DustyBuns.com
 - Emphasis on complex CSS Selectors
-- pseudo selectors and stacking class 
+- pseudo selectors and stacking classes
 - Introduction to CSS animations</code></pre>
 
-<h1 id="toc_10">Week 8: (03/21/16 - 03/25/16)</h1>
+<h1 id="toc_9">Week 8: (03/21/16 - 03/25/16)</h1>
 
-<pre><code>##Overview Of Concepts Covered
+<pre><code>* Overview Of Concepts Covered
 - Debugging previous projects (GeekwiseAcademy.com &amp; DustyBuns.com)
 - Emphasis on interaction with a Project Manager
 - Working on a complete site from mockup to static HTML/CSS 
 - Introduction to workflow concepts for production work</code></pre>
 
-<h1 id="toc_11">Week 9: (03/28/16 - 04/01/16)</h1>
+<h1 id="toc_10">Week 9: (03/28/16 - 04/01/16)</h1>
 
-<pre><code>##Overview Of Concepts Covered
+<pre><code>* Overview Of Concepts Covered
 - Introduction to Javascript
 - Concepts of DOM (Document Object Model)
 - Language Usage and Vocabulary
 - Variables,Functions and Conditionals
 - Emphasis on Functions</code></pre>
 
-<h1 id="toc_12">Week 10: (04/04/16 - 04/08/16)</h1>
+<h1 id="toc_11">Week 10: (04/04/16 - 04/08/16)</h1>
 
-<pre><code>##Overview Of Concepts Covered
+<pre><code>* Overview Of Concepts Covered
 - Introduction to API&#39;s
-- Emphasis on Create aspects CRUD
+- Application Programming Interface
+- The basics of a &quot;web app&quot; versus website
+- Emphasis on the Create aspects CRUD
 - For Loops and If Statements
 - Introduction to Event Listeners</code></pre>
 
-<h1 id="toc_13">Week 11: (04/11/16 - 04/15/16)</h1>
+<h1 id="toc_12">Week 11: (04/11/16 - 04/15/16)</h1>
 
-<pre><code>##Overview Of Concepts Covered
+<pre><code>* Overview Of Concepts Covered
 - Javascript CRUD
-- Emphasis on Read of CRUD
+- Emphasis on the Read of CRUD
 - Reading data from the Github API
 - Objects and JSON data
 - Introduction to Asynchronous Javascript</code></pre>
