updated index page typo

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ pre[class*="language-"] {
 - Introduction to API&#39;s
 - Application Programming Interface
 - The basics of a &quot;web app&quot; versus website
-- Emphasis on the Create aspects CRUD
+- Emphasis on the Create aspects of CRUD
 - For Loops and If Statements
 - Introduction to Event Listeners</code></pre>
 
@@ -538,7 +538,7 @@ pre[class*="language-"] {
 
 <pre><code>* Overview Of Concepts Covered
 - Javascript CRUD
-- Emphasis on the Read of CRUD
+- Emphasis on the Read aspects of CRUD
 - Reading data from the Github API
 - Objects and JSON data
 - Introduction to Asynchronous Javascript</code></pre>
