--- a/index.html
+++ b/index.html
@@ -545,11 +545,20 @@ pre[class*="language-"] {
 
 <h1 id="toc_13">Week 12: (04/18/16 - 04/22/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered</code></pre>
+<pre><code>* Overview Of Concepts Covered
+- Building a basic app concepts covered with a web based calculator
+- Debugging and working with smaller pieces to complete a puzzle - How to build a tiny web app
+- Deep dive and review on all Javascript concepts to asset working knowledge of Javascript
+- Combining functions to complete the requirements of CRUD</code></pre>
 
 <h1 id="toc_14">Week 13: (04/25/16 - 04/29/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered</code></pre>
+<pre><code>* Overview Of Concepts Covered
+- Javascript Objects And Concepts
+- Emphasis on &quot;How To&quot; and best practices when working with objects and functions
+- Building an Address Book Web App
+- Outside learning material and supplemental training provided
+- Introduction to Web App Design and Development Concepts (UI/UX)</code></pre>
 
 <h1 id="toc_15">Week 14: (05/02/16 - 05/06/16)</h1>
 
