updated for week 2 of wordpress

--- a/index.html
+++ b/index.html
@@ -562,11 +562,28 @@ pre[class*="language-"] {
 
 <h1 id="toc_15">Week 14: (05/02/16 - 05/06/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered</code></pre>
+<pre><code>* Overview Of Concepts Covered
+
+* WP Group
+- Overview of WP content intergration
+- Pages, Posts, Taxonomy
+- Overview of Child Themes
+- Custom Post Types / Fields
+- Content Data Entry and Site Structure
+- 10 Page from Static (html/css/js) to WP layout
+- Overview of WP Shortcodes and Plugins
+- Admin panel , permissions, users, security
+- Using GIT to have work flow process for WP and GIT</code></pre>
 
 <h1 id="toc_16">Week 15: (05/09/16 - 05/13/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered</code></pre>
+<pre><code>* Overview Of Concepts Covered
+
+* WP Group
+- HTML 5 Boiler Plate for Child Theme
+- PHP includes
+- Custom Post Types Plugin
+- Inque for CSS</code></pre>
 
 <h1 id="toc_17">Week 16: (05/16/16 - 05/20/16)</h1>
 
