updated materials on 06-08-2016 @ 10-43-AM

--- a/index.html
+++ b/index.html
@@ -445,161 +445,401 @@ pre[class*="language-"] {
 
 <h2 id="toc_1">Accelerated Apprenticeship (Work Training Program):</h2>
 
-<hr>
-
 <h1 id="toc_2">Week 1: (02/01/16 - 02/05/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
-- Four soft skills needed for employment
-- Creativity,Communication,Critical Thinking, Collaboration
-- Introduction to HTML and CSS</code></pre>
+<hr>
+
+<ul>
+<li>Overview Of Concepts Covered
+
+<ul>
+<li>Four soft skills needed for employment</li>
+<li>Creativity,Communication,Critical Thinking, Collaboration</li>
+<li>Introduction to <code>HTML</code> and <code>CSS</code></li>
+</ul></li>
+</ul>
 
 <h1 id="toc_3">Week 2: (02/08/16 - 02/12/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
-- Team building
-- Group Webpage Projects introduced
-- Measurements of success introduced
-- Discussion of accountability
-- What will it take to succeed in the program?</code></pre>
+<hr>
+
+<ul>
+<li>Overview Of Concepts Covered
+
+<ul>
+<li>Team building</li>
+<li>Group Webpage Projects introduced</li>
+<li>Measurements of success introduced</li>
+<li>Discussion of accountability</li>
+<li>What will it take to succeed in the program?</li>
+</ul></li>
+</ul>
 
 <h1 id="toc_4">Week 3: (02/15/16 - 02/19/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
-- Upwork.com Tests introduced
-- Life skills needed to transition into web development
-- Independent learning and outside practice
-- Programming fundamentals
-- Introduction to Computer Science fundamentals
-- The 12 Steps To Better Code
-- The &quot;web&quot; as a language using HTML/CSS/JS </code></pre>
+<hr>
+
+<ul>
+<li>Overview Of Concepts Covered
+
+<ul>
+<li>Upwork.com Tests introduced</li>
+<li>Life skills needed to transition into web development</li>
+<li>Independent learning and outside practice</li>
+<li>Programming fundamentals</li>
+<li>Introduction to Computer Science fundamentals</li>
+<li>The 12 Steps To Better Code</li>
+<li>The <q>web</q> as a language using <code>HTML/CSS/JS</code> </li>
+</ul></li>
+</ul>
 
 <h1 id="toc_5">Week 4: (02/22/16 - 02/26/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
-- Web Layout: From design to first presentation to a client
-- Emphasis on Mockups and Client presentation materials
-- Language Usage and Vocabulary for professional client interaction
-- Introduction to the Box Model and basic web layout</code></pre>
+<hr>
+
+<ul>
+<li>Overview Of Concepts Covered
+
+<ul>
+<li>Web Layout: From design to first presentation to a client</li>
+<li>Emphasis on Mockups and Client presentation materials</li>
+<li>Language Usage and Vocabulary for professional client interaction</li>
+<li>Introduction to the Box Model and basic web layout</li>
+</ul></li>
+</ul>
 
 <h1 id="toc_6">Week 5: (02/29/16 - 03/04/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
-- Weekly Professional Workshop Series introduced
-- Emphasis on Resumes and Independent study 
-- Language Usage and Vocabulary for professional Web Development
-- Introduction to Github, GIT
-- Repositories for workflow on production level projects</code></pre>
+<hr>
+
+<ul>
+<li>Overview Of Concepts Covered
+
+<ul>
+<li>Weekly Professional Workshop Series introduced</li>
+<li>Emphasis on Resumes and Independent study </li>
+<li>Language Usage and Vocabulary for professional Web Development</li>
+<li>Introduction to Github, GIT</li>
+<li>Repositories for workflow on production level projects</li>
+</ul></li>
+</ul>
 
 <h1 id="toc_7">Week 6: (03/07/16 - 03/11/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
-- 7 page site built from GeekwiseAcademy.com
-- Emphasis on CSS Box Model 
-- Page Layout and HTML/CSS Structure 
-- Introduction to FlexBox and Mobile Web</code></pre>
+<hr>
+
+<ul>
+<li>Overview Of Concepts Covered
+
+<ul>
+<li>7 page site built from GeekwiseAcademy.com</li>
+<li>Emphasis on <code>CSS</code> Box Model </li>
+<li>Page Layout and <code>HTML/CSS</code> Structure </li>
+<li>Introduction to FlexBox and Mobile Web</li>
+</ul></li>
+</ul>
 
 <h1 id="toc_8">Week 7: (03/14/16 - 03/18/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
-- 14 page site built from DustyBuns.com
-- Emphasis on complex CSS Selectors
-- pseudo selectors and stacking classes
-- Introduction to CSS animations</code></pre>
+<hr>
+
+<ul>
+<li>Overview Of Concepts Covered
+
+<ul>
+<li>14 page site built from DustyBuns.com</li>
+<li>Emphasis on complex <code>CSS</code> Selectors</li>
+<li>pseudo selectors and stacking classes</li>
+<li>Introduction to <code>CSS</code> animations</li>
+</ul></li>
+</ul>
 
 <h1 id="toc_9">Week 8: (03/21/16 - 03/25/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
-- Debugging previous projects (GeekwiseAcademy.com &amp; DustyBuns.com)
-- Emphasis on interaction with a Project Manager
-- Working on a complete site from mockup to static HTML/CSS 
-- Introduction to workflow concepts for production work</code></pre>
+<hr>
+
+<ul>
+<li>Overview Of Concepts Covered
+
+<ul>
+<li>Debugging previous projects (GeekwiseAcademy.com &amp; DustyBuns.com)</li>
+<li>Emphasis on interaction with a Project Manager</li>
+<li>Working on a complete site from mockup to static HTML/<code>CSS</code> </li>
+<li>Introduction to workflow concepts for production work</li>
+</ul></li>
+</ul>
 
 <h1 id="toc_10">Week 9: (03/28/16 - 04/01/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
-- Introduction to Javascript
-- Concepts of DOM (Document Object Model)
-- Language Usage and Vocabulary
-- Variables,Functions and Conditionals
-- Emphasis on Functions</code></pre>
+<hr>
+
+<ul>
+<li>Overview Of Concepts Covered
+
+<ul>
+<li>Introduction to Javascript</li>
+<li>Concepts of DOM (Document Object Model)</li>
+<li>Language Usage and Vocabulary</li>
+<li>Variables,Functions and Conditionals</li>
+<li>Emphasis on Functions</li>
+</ul></li>
+</ul>
 
 <h1 id="toc_11">Week 10: (04/04/16 - 04/08/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
-- Introduction to API&#39;s
-- Application Programming Interface
-- The basics of a &quot;web app&quot; versus website
-- Emphasis on the Create aspects of CRUD
-- For Loops and If Statements
-- Introduction to Event Listeners</code></pre>
+<hr>
+
+<ul>
+<li>Overview Of Concepts Covered
+
+<ul>
+<li>Introduction to API&rsquo;s</li>
+<li>Application Programming Interface</li>
+<li>The basics of a <q>web app</q> versus website</li>
+<li>Emphasis on the Create aspects of CRUD</li>
+<li>For Loops and If Statements</li>
+<li>Introduction to Event Listeners</li>
+</ul></li>
+</ul>
 
 <h1 id="toc_12">Week 11: (04/11/16 - 04/15/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
-- Javascript CRUD
-- Emphasis on the Read aspects of CRUD
-- Reading data from the Github API
-- Objects and JSON data
-- Introduction to Asynchronous Javascript</code></pre>
+<hr>
+
+<ul>
+<li>Overview Of Concepts Covered
+
+<ul>
+<li>Javascript CRUD</li>
+<li>Emphasis on the Read aspects of CRUD</li>
+<li>Reading data from the Github API</li>
+<li>Objects and JSON data</li>
+<li>Introduction to Asynchronous Javascript</li>
+</ul></li>
+</ul>
 
 <h1 id="toc_13">Week 12: (04/18/16 - 04/22/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
-- Building a basic app concepts covered with a web based calculator
-- Debugging and working with smaller pieces to complete a puzzle - How to build a tiny web app
-- Deep dive and review on all Javascript concepts to asset working knowledge of Javascript
-- Combining functions to complete the requirements of CRUD</code></pre>
+<hr>
+
+<ul>
+<li>Overview Of Concepts Covered
+
+<ul>
+<li>Building a basic app concepts covered with a web based calculator</li>
+<li>Debugging and working with smaller pieces to complete a puzzle - How to build a tiny web app</li>
+<li>Deep dive and review on all Javascript concepts to asset working knowledge of Javascript</li>
+<li>Combining functions to complete the requirements of CRUD</li>
+</ul></li>
+</ul>
 
 <h1 id="toc_14">Week 13: (04/25/16 - 04/29/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
-- Javascript Objects And Concepts
-- Emphasis on &quot;How To&quot; and best practices when working with objects and functions
-- Building an Address Book Web App
-- Outside learning material and supplemental training provided
-- Introduction to Web App Design and Development Concepts (UI/UX)</code></pre>
+<hr>
+
+<ul>
+<li>Overview Of Concepts Covered
+
+<ul>
+<li>Javascript Objects And Concepts</li>
+<li>Emphasis on <q>How To</q> and best practices when working with objects and functions</li>
+<li>Building an Address Book Web App</li>
+<li>Outside learning material and supplemental training provided</li>
+<li>Introduction to Web App Design and Development Concepts (UI/UX)</li>
+</ul></li>
+</ul>
 
 <h1 id="toc_15">Week 14: (05/02/16 - 05/06/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
+<hr>
 
-* WP Group
-- Overview of WP content intergration
-- Pages, Posts, Taxonomy
-- Overview of Child Themes
-- Custom Post Types / Fields
-- Content Data Entry and Site Structure
-- 10 Page from Static (html/css/js) to WP layout
-- Overview of WP Shortcodes and Plugins
-- Admin panel , permissions, users, security
-- Using GIT to have work flow process for WP and GIT</code></pre>
+<ul>
+<li><p>Overview Of Concepts Covered</p></li>
+<li><p>JS Group</p>
+
+<ul>
+<li>Single page JS app
+
+<ul>
+<li><code>How To</code> write complex functions that are modular</li>
+<li><code>How To</code> write a <code>Callbacks</code></li>
+<li><code>How To</code> return data in an out of JS</li>
+<li><code>How To</code> work on a <code>forked</code> repository from Github</li>
+<li>Introduction to collabritive team based coding with a lead dev</li>
+</ul></li>
+</ul></li>
+<li><p>WP Group</p>
+
+<ul>
+<li>GeekwiseAcademy (Static To WP conversion)
+
+<ul>
+<li>Overview of WP content integration</li>
+<li>Pages, Posts, Taxonomy</li>
+<li>Overview of Child Themes</li>
+<li>Custom Post Types / Fields</li>
+<li>Content Data Entry and Site Structure</li>
+<li>10 Page from Static (<code>HTML/CSS/JS</code>) to WP layout</li>
+<li>Overview of WP Short-Codes and Plugins</li>
+<li>Admin panel , permissions, users, security</li>
+<li>Using GIT to have work flow process for WP and GIT</li>
+</ul></li>
+</ul></li>
+</ul>
 
 <h1 id="toc_16">Week 15: (05/09/16 - 05/13/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered
+<hr>
 
-* WP Group
-- HTML 5 Boiler Plate for Child Theme
-- PHP includes
-- Custom Post Types Plugin
-- Inque for CSS</code></pre>
+<ul>
+<li><p>Overview Of Concepts Covered</p></li>
+<li><p>WP Group</p>
+
+<ul>
+<li>GeekwiseAcademy (Static To WP conversion)
+
+<ul>
+<li><code>HTML5</code> Boiler Plate for Child Theme</li>
+<li>PHP includes</li>
+<li>Custom Post Types Plugin</li>
+<li>include for <code>CSS</code></li>
+</ul></li>
+</ul></li>
+<li><p>JS Group</p>
+
+<ul>
+<li><code>IOS</code> Contacts (JS Web App)
+
+<ul>
+<li>Creating <code>SPEC</code> and <code>Documentation</code> for repository and <code>JS Web App</code></li>
+<li><code>How To</code> include external <code>JS</code> files</li>
+<li>Complex <code>Event Listeners</code> and <code>Callbacks</code></li>
+</ul></li>
+</ul></li>
+</ul>
 
 <h1 id="toc_17">Week 16: (05/16/16 - 05/20/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered</code></pre>
+<hr>
+
+<ul>
+<li><p>Overview Of Concepts Covered</p></li>
+<li><p>WP Group</p>
+
+<ul>
+<li>GeekwiseAcademy (Static To WP conversion)
+
+<ul>
+<li>Heavy Q/A Testing to finalize projects</li>
+<li><code>CSS</code> debugging</li>
+<li>Complex <code>media queries</code></li>
+</ul></li>
+</ul></li>
+<li><p>JS Group</p>
+
+<ul>
+<li><code>IOS</code> Contacts (JS Web App)
+
+<ul>
+<li>Multi Phone Device testing for Landscape and Portrait Modes</li>
+<li>Using <code>HTML5</code> data types for complex targeting for Web App structure <code>&lt;span data-device=&quot;ios&quot;/&gt;</code></li>
+<li><code>CSS</code> for Web Apps <code>VS</code> websites</li>
+<li><code>CRUD</code> with <code>HTML5</code> advanced features using the <code>Camera API</code> with <code>JS</code> </li>
+</ul></li>
+</ul></li>
+</ul>
 
 <h1 id="toc_18">Week 17: (05/23/16 - 05/27/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered</code></pre>
+<hr>
+
+<ul>
+<li><p>Overview Of Concepts Covered</p></li>
+<li><p>WP Group</p>
+
+<ul>
+<li>City Of Madera (Static To WP conversion)
+
+<ul>
+<li>How to approach a site redesign</li>
+<li>Designing for <code>usability</code> </li>
+<li>Site Architecture Started</li>
+<li><code>HTML</code> Layout for 34 static pages</li>
+<li>Linking Structure and testing</li>
+</ul></li>
+</ul></li>
+<li><p>JS Group</p>
+
+<ul>
+<li><code>IOS</code> Contacts (JS Web App)
+
+<ul>
+<li><code>MVC</code> Overview for future refactoring </li>
+<li><code>MVC</code> Refactoring started 600+ lines</li>
+<li>Training on <code>how to</code> refactor a project</li>
+</ul></li>
+</ul></li>
+</ul>
 
 <h1 id="toc_19">Week 18: (05/30/16 - 06/03/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered</code></pre>
+<hr>
+
+<ul>
+<li><p>Overview Of Concepts Covered</p></li>
+<li><p>WP Group</p>
+
+<ul>
+<li>City Of Madera (Static To WP conversion)
+
+<ul>
+<li>Site Architecture Q/A tested</li>
+<li><code>CSS</code> for four main templates started</li>
+</ul></li>
+</ul></li>
+<li><p>JS Group</p>
+
+<ul>
+<li><code>IOS</code> Contacts (JS Web App)
+
+<ul>
+<li><code>MVC</code> Refactor complete</li>
+<li><code>dot notation</code> file naming structure</li>
+<li><code>modular functions</code> implemented</li>
+<li> Search and Scroll features started</li>
+</ul></li>
+</ul></li>
+</ul>
 
 <h1 id="toc_20">Week 19: (06/06/16 - 06/10/16)</h1>
 
-<pre><code>* Overview Of Concepts Covered</code></pre>
+<hr>
+
+<ul>
+<li><p>Overview Of Concepts Covered</p></li>
+<li><p>WP Group</p>
+
+<ul>
+<li>City Of Madera (Static To WP conversion)
+
+<ul>
+<li>Site Architecture Completed</li>
+<li>34 <code>HTML</code> Static Templates Completed</li>
+<li><code>CSS</code> for four main templates in progress </li>
+</ul></li>
+</ul></li>
+<li><p>JS Group</p>
+
+<ul>
+<li><code>IOS</code> Contacts (JS Web App)
+
+<ul>
+<li>Feature Sprint For Search and Scroll</li>
+<li>Feedback from BitWise Developers on project</li>
+<li>JS DOC implementation started</li>
+</ul></li>
+</ul></li>
+</ul>
 
 <h1 id="toc_21">Week 20: (06/13/16 - 06/17/16)</h1>
 
